--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a class="button is-primary mr-2" href=" javascript:alert('hi');">javascript</a>
             <a class="button is-primary mr-2" href=" tel:+123456789">tel</a>
             <a class="button is-primary mr-2" href=" mailto:augustasalminas2@gmail.com">mail</a>
+            <a class="button is-primary mr-2" href=" spotify:search:acdc">spotify</a>
         </div>
     </section>
 </body>
