--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
             <a class="button is-primary mr-2" href=" javascript:alert('hi');">javascript</a>
             <a class="button is-primary mr-2" href=" tel:+123456789">tel</a>
             <a class="button is-primary mr-2" href=" mailto:augustasalminas2@gmail.com">mail</a>
+            <br>
             <a class="button is-primary mr-2" href=" spotify:search:acdc">spotify</a>
+            <a class="button is-primary mr-2"  href="/img.png" download>Image</a>
+            <a class="button is-primary mr-2"  href="/text.txt" download>Text</a>
         </div>
     </section>
 </body>
