--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             <a class="button is-primary mr-2" href=" mailto:augustasalminas2@gmail.com">mail</a>
             <br>
             <a class="button is-primary mr-2" href=" spotify:search:acdc">spotify</a>
-            <a class="button is-primary mr-2"  href="/img.png" download>Image</a>
-            <a class="button is-primary mr-2"  href="/text.txt" download>Text</a>
+            <a class="button is-primary mr-2"  href="https://images.pexels.com/photos/1805164/pexels-photo-1805164.jpeg?cs=srgb&dl=pexels-valeria-boltneva-1805164.jpg&fm=jpg">Image</a>
         </div>
     </section>
 </body>
