--- a/index.html
+++ b/index.html
@@ -20,7 +20,36 @@
             <a class="button is-primary mr-2" href=" mailto:augustasalminas2@gmail.com">mail</a>
             <br>
             <a class="button is-primary mr-2" href=" spotify:search:acdc">spotify</a>
-            <a class="button is-primary mr-2"  href="https://images.pexels.com/photos/1805164/pexels-photo-1805164.jpeg?cs=srgb&dl=pexels-valeria-boltneva-1805164.jpg&fm=jpg">Image</a>
+            <a class="button is-primary mr-2"
+                href="https://images.pexels.com/photos/1805164/pexels-photo-1805164.jpeg?cs=srgb&dl=pexels-valeria-boltneva-1805164.jpg&fm=jpg">Image</a>
+        </div>
+        <div class="mt-4">
+            <div id="file-js-example" class="file has-name">
+                <label class="file-label">
+                    <input class="file-input" type="file" name="resume">
+                    <span class="file-cta">
+                        <span class="file-icon">
+                            <i class="fas fa-upload"></i>
+                        </span>
+                        <span class="file-label">
+                            Choose a file…
+                        </span>
+                    </span>
+                    <span class="file-name">
+                        No file uploaded
+                    </span>
+                </label>
+            </div>
+
+            <script>
+                const fileInput = document.querySelector('#file-js-example input[type=file]');
+                fileInput.onchange = () => {
+                    if (fileInput.files.length > 0) {
+                        const fileName = document.querySelector('#file-js-example .file-name');
+                        fileName.textContent = fileInput.files[0].name;
+                    }
+                }
+            </script>
         </div>
     </section>
 </body>
