--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <br>
             <a class="button is-primary mr-2" href=" spotify:search:acdc">spotify</a>
             <a class="button is-primary mr-2"
-                href="https://images.pexels.com/photos/1805164/pexels-photo-1805164.jpeg?cs=srgb&dl=pexels-valeria-boltneva-1805164.jpg&fm=jpg">Image</a>
+                href="https://images.pexels.com/photos/1805164/pexels-photo-1805164.jpeg?cs=srgb&dl=pexels-valeria-boltneva-1805164.jpg&fm=jpg" download>Image</a>
         </div>
         <div class="mt-4">
             <div id="file-js-example" class="file has-name">
