--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script>
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
-            navigator.serviceWorker.register('uri_test_page/sw.js').then(function (registration) {
+            navigator.serviceWorker.register('https://augustas-alminas.github.io/uri_test_page/sw.js').then(function (registration) {
                 // Registration was successful
                 console.log('ServiceWorker registration successful with scope: ', registration.scope);
             }, function (err) {
